# AutoTQDCSProgramming

./: .autotq_api_key  .autotq_api_key.sample  .gitignore  AutoTQ_Manufacturer_Portal_API_Reference.md  AutoTQ_OneClick_Launcher.cmd  BULK_AUDIO_TRANSFER.md  ONE_CLICK_DEPLOY.md  PACKAGING.md  PORT_TROUBLESHOOTING.md  README.md  SIMPLE_GITHUB_DEPLOY.md  arduino_debug.py  audio_downloader.py  autotq_api_key.txt  autotq_auto_production.py  autotq_bulk_audio_transfer.py  autotq_check_auth.py  autotq_client.py  autotq_cycling_stage.py  autotq_device_info.py  autotq_device_programmer.py  autotq_firmware_programmer.py  autotq_login.py  autotq_menu.bat  autotq_menu.ps1  autotq_pcbs_cli.py  autotq_programmer.py  autotq_quick_check.py  autotq_setup.py  autotq_token.json  autotq_unified_production.py  check_and_login.bat  check_and_login.ps1  check_port.bat  check_port.py  create_shortcut.bat  create_shortcut.ps1  create_shortcut.vbs  csv_aggregate_metrics.py  gpib.py  (+37 more)
.github/workflows/: ci.yml  publish-private-release.yml
deploy/: SETUP.md  deploy.config.example.ps1  init_deploy.ps1  publish_release.ps1  worker.js  wrangler.toml.example
templates/: index.html
